src/objects/Property_Unit__c.object
<CustomObject>
    <description>this is a Unit Attached to a Property. the record type specifies which relationships it has.</description>
    <fields>
        <fullName>AMI__c</fullName>
        <label>AMI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>45%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>55%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>65%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accesibility__c</fullName>
        <label>Accesibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Placements__c</fullName>
        <label>Active Placements</label>
        <summaryFilterItems>
            <field>Unit_Placement__c.Exit_Date__c</field>
            <operation>equals</operation>
            <value>&apos;&apos;</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_Placement__c.Assigned_Unit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Affordable_Units__c</fullName>
        <label>Affordable Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Rehab</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bath_Score__c</fullName>
        <formula>CASE( Bath__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bath Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bath__c</fullName>
        <label>Bath</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BedroomCount__c</fullName>
        <formula>CASE( Bedroom_Type__c, &quot;Studio&quot;, 0, &quot;1 Bedroom&quot;, 1, &quot;2 Bedrooms&quot;, 2, &quot;3 Bedrooms&quot;, 3, &quot;4 Bedrooms&quot;, 4, &quot;5 Bedrooms&quot;, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BedroomCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedroom_Type__c</fullName>
        <label>Bedroom Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SRO</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom</fullName>
                </value>
                <value>
                    <fullName>2 Bedrooms</fullName>
                </value>
                <value>
                    <fullName>3 Bedrooms</fullName>
                </value>
                <value>
                    <fullName>4 Bedrooms</fullName>
                </value>
                <value>
                    <fullName>5 Bedrooms</fullName>
                </value>
                <value>
                    <fullName>6 Bedrooms</fullName>
                </value>
                <value>
                    <fullName>7 Bedrooms</fullName>
                </value>
                <value>
                    <fullName>8 Bedrooms</fullName>
                </value>
                <value>
                    <fullName>Shared Housing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beds__c</fullName>
        <label>Number of Bedrooms</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Between_6_and_17__c</fullName>
        <label>Between 6 and 17</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Bulding Units</relationshipLabel>
        <relationshipName>Building_Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Child_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Text(Building__r.City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_HQS__c</fullName>
        <label>Date of HQS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doors_Score__c</fullName>
        <formula>CASE( Doors__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doors Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doors__c</fullName>
        <label>Doors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical_Score__c</fullName>
        <formula>CASE( Electrical__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical__c</fullName>
        <label>Electrical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flooring_Score__c</fullName>
        <formula>CASE( Flooring__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flooring Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flooring__c</fullName>
        <label>Flooring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HQS_Type__c</fullName>
        <label>HQS Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Inspection</fullName>
                </value>
                <value>
                    <fullName>Real Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HVAC_Score__c</fullName>
        <formula>CASE( HVAC__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HVAC Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC__c</fullName>
        <label>HVAC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handicaped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handicaped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Score__c</fullName>
        <formula>CASE( Health_Safety__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health &amp; Safety Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Health_Safety__c</fullName>
        <label>Health &amp; Safety</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing__c</fullName>
        <label>Hearing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_1__c</fullName>
        <label>Income 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_2__c</fullName>
        <label>Income 2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_3__c</fullName>
        <label>Income 3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kitchen_Score__c</fullName>
        <formula>CASE( Kitchen__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kitchen Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kitchen__c</fullName>
        <label>Kitchen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Contacted_Landlord__c</fullName>
        <label>Last Contacted Landlord</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Physical_Needs_Assessment__c</fullName>
        <label>Last Physical Needs Assessment</label>
        <summarizedField>Unit_GPNA__c.Inspection_Date__c</summarizedField>
        <summaryForeignKey>Unit_GPNA__c.Associated_Unit_ID__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LegacyRHNumber__c</fullName>
        <externalId>true</externalId>
        <label>LegacyRHNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meets_ADA_Requirements__c</fullName>
        <formula>IF(OR(TEXT(Accesibility__c) = &quot;Yes&quot;,Text(Hearing__c) = &quot;Yes&quot;,Text(Vision__c) = &quot;Yes&quot;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meets ADA Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Bathrooms__c</fullName>
        <label>Number of Bathrooms</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Over_60__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over 60</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plumbing_Score__c</fullName>
        <formula>CASE( Plumbing__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plumbing Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plumbing__c</fullName>
        <label>Plumbing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Manager_Unit__c</fullName>
        <label>Property Manager Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <formula>Building__r.Property_Owner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Not_Available__c</fullName>
        <label>Reason Not Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rented Through Housing First SD</fullName>
                </value>
                <value>
                    <fullName>Rented to Non-SDHC Tenant</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rehab_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rehab Project</label>
        <referenceTo>Rehab_Project__c</referenceTo>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Released_Date__c</fullName>
        <inlineHelpText>This is the date that the Unit was released and SDHC no longer can use it for placement.</inlineHelpText>
        <label>Released Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Amount__c</fullName>
        <label>Rent Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDHC_Program_Affiliation__c</fullName>
        <description>Used for Filtering Property Units. This allows for each SDHC Department to filter on only the units they need to see.</description>
        <inlineHelpText>Please select any and all SDHC programs this unit is affiliated with. NOTE: If you don&apos;t select your program, you probably won&apos;t see this unit represented on reports or included in counts. 

This will be replacing Record Type!</inlineHelpText>
        <label>SDHC Program Affiliation</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDHC_Community_Relationships</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_CO_Score__c</fullName>
        <formula>CASE( SD_CO__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SD/CO Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_CO__c</fullName>
        <label>SD/CO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Text(Building__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <formula>Building__r.Street_Number_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Old__c</fullName>
        <label>Street_Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Building__r.Street_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Under_6_Medical__c</fullName>
        <label>Under 6 Medical</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_6__c</fullName>
        <label>Under 6</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Available_Date__c</fullName>
        <inlineHelpText>This is the date the Unit would be available to SDHC for placement.</inlineHelpText>
        <label>Unit Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0 Bedroom 0 Bath</fullName>
                </value>
                <value>
                    <fullName>1 bd 1 ba elderly down</fullName>
                </value>
                <value>
                    <fullName>1 bd 1 ba elderly up</fullName>
                </value>
                <value>
                    <fullName>1 bdrm  1 bath</fullName>
                </value>
                <value>
                    <fullName>1 bed 1 bath Elderly - Down unit</fullName>
                </value>
                <value>
                    <fullName>1 bed 1 bath Elderly - Up unit</fullName>
                </value>
                <value>
                    <fullName>1 bed 1 bath Family - Down unit</fullName>
                </value>
                <value>
                    <fullName>1 bed 1 bath Family - Up unit</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom 1 Bath</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom 1 Bath Disability</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom 1 Bath Downstairs</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom 1 Bath Upstairs</fullName>
                </value>
                <value>
                    <fullName>1 BR 1 BA DOWN FAMILY</fullName>
                </value>
                <value>
                    <fullName>1 BR 1 BA UP FAMILY</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath  Family - Up unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Disabled - Down unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Disabled - Up unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Elderly - Down unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Elderly - Up unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Family - Down unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Family - Manager Apartment</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Family - Up unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Single Family</fullName>
                </value>
                <value>
                    <fullName>2 bed 1 bath Townhome</fullName>
                </value>
                <value>
                    <fullName>2 bed 2 bath  Family - Up unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 2 bath Family - Down unit</fullName>
                </value>
                <value>
                    <fullName>2 bed 2 bath Family - Up unit</fullName>
                </value>
                <value>
                    <fullName>2 Bedroom 1 Bath</fullName>
                </value>
                <value>
                    <fullName>2 Bedroom 2 Bath</fullName>
                </value>
                <value>
                    <fullName>2 Bedroom 2 Bath Disability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitors_Older_Than_6_With_Medical__c</fullName>
        <label>Visitors Older Than 6 With Medical</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visitors_Older_Than_6__c</fullName>
        <label>Visitors Older Than 6</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Walls_Score__c</fullName>
        <formula>CASE( Walls__c , &apos;Excellent&apos;, 0.05, &apos;Good&apos;, 0.66, &apos;Fair&apos;, 1.34, &apos;Poor&apos;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Walls Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Walls__c</fullName>
        <label>Walls</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inspection_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_10__c</fullName>
        <label>Year 10</label>
        <summarizedField>Unit_GPNA__c.Subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>Unit_GPNA__c.Replacement_Year__c</field>
            <operation>equals</operation>
            <value>Year 10</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_GPNA__c.Associated_Unit_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_11__c</fullName>
        <label>Year 11</label>
        <summarizedField>Unit_GPNA__c.Subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>Unit_GPNA__c.Replacement_Year__c</field>
            <operation>equals</operation>
            <value>Year 11</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_GPNA__c.Associated_Unit_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_12__c</fullName>
        <label>Year 12</label>
        <summarizedField>Unit_GPNA__c.Subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>Unit_GPNA__c.Replacement_Year__c</field>
            <operation>equals</operation>
            <value>Year 12</value>
        </summaryFilterItems>
        <summaryForeignKey>Unit_GPNA__c.Associated_Unit_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Old__c</fullName>
        <label>Zip Code_Old</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Building__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Property Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Unit_Name__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Housing_Finance_Units</fullName>
        <columns>NAME</columns>
        <columns>Unit_Name__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Housing Finance Database</value>
        </filters>
        <label>Housing Finance Units</label>
    </listViews>
    <listViews>
        <fullName>Housing_First_Available_Units</fullName>
        <columns>NAME</columns>
        <columns>Unit_Name__c</columns>
        <columns>Bedroom_Type__c</columns>
        <columns>Number_of_Bathrooms__c</columns>
        <columns>Building__c</columns>
        <columns>Property_Owner__c</columns>
        <columns>Rent_Amount__c</columns>
        <columns>Security_Deposit__c</columns>
        <columns>Street_Number__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Housing First</value>
        </filters>
        <label>Housing First Available Units</label>
    </listViews>
    <listViews>
        <fullName>Housing_First_Units</fullName>
        <columns>NAME</columns>
        <columns>Unit_Name__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>City__c</columns>
        <columns>Street__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Housing First</value>
        </filters>
        <label>Housing First Units</label>
    </listViews>
    <listViews>
        <fullName>Housing_First_Units_With_Placements</fullName>
        <columns>NAME</columns>
        <columns>Unit_Name__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>Street_Number__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Housing First</value>
        </filters>
        <label>Housing First Units With Placements</label>
    </listViews>
    <listViews>
        <fullName>Portfolio_Management</fullName>
        <columns>NAME</columns>
        <columns>Unit_Name__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>Street_Number__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Portfolio Management</value>
        </filters>
        <label>Portfolio Management</label>
    </listViews>
    <listViews>
        <fullName>Rehab_Units</fullName>
        <columns>NAME</columns>
        <columns>Unit_Name__c</columns>
        <columns>Unit_Number__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDHC_Program_Affiliation__c</field>
            <operation>includes</operation>
            <value>Rehab</value>
        </filters>
        <label>Rehab Units</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>UnitID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Units</pluralLabel>
    <recordTypes>
        <fullName>Master_Unit_Record_Type</fullName>
        <active>true</active>
        <description>This Record Type lists all fields for Sys Admins</description>
        <label>Master Unit Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Minimal_Information</fullName>
        <active>true</active>
        <description>Shows the Minimal Unit Information and all fields are Read Only</description>
        <label>Minimal Information</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Unit_Currently_Vacant_Reason_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( TEXT(Unit_Currently_Vacant__c) = &apos;No&apos;, ISBLANK( TEXT(Reason_Not_Available__c) ) )</errorConditionFormula>
        <errorDisplayField>Reason_Not_Available__c</errorDisplayField>
        <errorMessage>If the Unit is Not Currently Vacant, you must supply a &quot;Reason Not 
Available&quot;.</errorMessage>
    </validationRules>
</CustomObject>